<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_favorite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff8c00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageBtnSettings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_round_settings_24"
            android:backgroundTint="@color/background_app"
            android:contentDescription="@string/image_button"
            android:padding="10dp" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/frame_search"
            android:backgroundTint="@color/background_app"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/frame_search1"
            android:backgroundTint="@color/background_app"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBarFav"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewFav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        tools:ignore="UnknownIdInLayout"
        tools:listitem="@layout/item_row_user" />

    <ImageView
        android:id="@+id/imageViewNoFavorite"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_content"
        android:src="@drawable/no_favorite"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNoFavorite"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/boogaloo_regular"
        android:gravity="center"
        android:text="@string/text_no_favorite"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewNoFavorite" />

</androidx.constraintlayout.widget.ConstraintLayout>